--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1913,7 +1913,7 @@ input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus,
 textarea:focus {
-  border-color: #83d3c9;
+  border-color: #25a5cb;
 }
 
 input[type="text"],
@@ -1977,7 +1977,10 @@ input[type="email"] {
 
 .image.featured img {
   display: block;
-  width: 100%;
+  height: 200px; /* Fixed height */
+  width: 100%; /* Stabilize width */
+  object-fit: cover; /* Crop or zoom the image to fill the area */
+  overflow: hidden; /* Ensures no overflow from the image container */
 }
 
 /* Icon */
@@ -2272,8 +2275,8 @@ input[type="submit"].primary,
 input[type="reset"].primary,
 button.primary,
 .button.primary {
-  background: #83d3c9;
-  border-color: #83d3c9;
+  background: #25a5cb;
+  border-color: #25a5cb;
   color: #fff !important;
 }
 
@@ -2316,7 +2319,7 @@ button.small,
 }
 
 .wrapper.style2 {
-  background-color: #83d3c9;
+  background-color: #25a5cb;
   background-image: url("images/light-bl.svg"), url("images/light-br.svg");
   background-position: bottom left, bottom right;
   background-repeat: no-repeat, no-repeat;
@@ -2339,7 +2342,7 @@ button.small,
 .wrapper.style2 .button.primary {
   background: #fff;
   border-color: #fff;
-  color: #83d3c9 !important;
+  color: #25a5cb !important;
 }
 
 .wrapper.style2 input[type="button"].primary:hover,
@@ -2580,7 +2583,7 @@ button.small,
 }
 
 .dropotron > li:hover > a {
-  background: #83d3c9;
+  background: #25a5cb;
   color: #fff;
 }
 
@@ -2634,7 +2637,7 @@ button.small,
   background-attachment: scroll, scroll, scroll, fixed;
   background-color: #645862;
   background-image: url("images/light-bl.svg"), url("images/light-br.svg"),
-    url("images/overlay.png"), url("../../images/banner.jpg");
+    url("images/overlay.png"), url("../../images/gelmu-clean.jpg");
   background-position: bottom left, bottom right, top left, top center;
   background-repeat: no-repeat, no-repeat, repeat, no-repeat;
   background-size: 25em, 25em, auto, cover;
@@ -2653,8 +2656,8 @@ button.small,
   -webkit-animation-fill-mode: forwards;
   -ms-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  background: rgba(52, 27, 43, 0.5);
-  color: #fff;
+  background: rgba(255, 255, 255, 0.8);
+  color: #000000;
   display: inline-block;
   opacity: 0;
   padding: 3em;
@@ -2734,7 +2737,7 @@ body.index #main {
   background-attachment: scroll, scroll, scroll, fixed;
   background-color: #645862;
   background-image: url("images/light-tl.svg"), url("images/light-tr.svg"),
-    url("images/overlay.png"), url("../../images/banner.jpg");
+    url("images/overlay.png"), url("../../images/gelmu-clean.jpg");
   background-position: top left, top right, top left, bottom center;
   background-repeat: no-repeat, no-repeat, repeat, no-repeat;
   background-size: 25em, 25em, auto, cover;
@@ -3361,10 +3364,6 @@ body.index #main {
     padding: 2.25em 1.5em;
   }
 
-  .wrapper.special br {
-    display: none;
-  }
-
   .wrapper.style1 {
     padding: 0 1.5em;
   }
@@ -3387,9 +3386,8 @@ body.index #main {
   }
 
   #banner .inner {
-    background: none;
     display: block;
-    padding: 0 1.5em;
+    padding: 1.5em 1.5em;
   }
 
   #banner .inner header h2 {
@@ -3455,4 +3453,11 @@ body.index #main {
     width: 50px;
     height: 34px;
   }
+}
+
+/*Extra*/
+
+.no-border {
+  outline: none !important; /* Removes dotted or any outline */
+  border: none !important; /* Removes border if it's styled */
 }
