--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3490,3 +3490,10 @@ body.index #main {
 #overide-center {
   text-align: center !important;
 }
+
+.yelp-review-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2em;
+}
