--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3458,8 +3458,9 @@ body.index #main {
 /*Extra*/
 
 .no-border {
-  outline: none !important; /* Removes dotted or any outline */
-  border: none !important; /* Removes border if it's styled */
+  outline: none !important;
+  border: none !important;
+  border-bottom: none !important;
 }
 
 .border-top-bot {
@@ -3472,7 +3473,7 @@ body.index #main {
 .map-container {
   position: relative;
   width: 100%;
-  padding-bottom: 25%; /* 16:9 Aspect Ratio */
+  padding-bottom: 25%;
   height: 100px;
   overflow: hidden;
   margin-bottom: 2em;
