--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1769,3 +1769,10 @@ $pattern-background-size: 25em;
 			}
 
 	}
+
+// Extra
+
+	.yelp-review {
+		justify-self: center;
+		margin-bottom: 2em;
+	  }
