--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3488,6 +3488,15 @@ body.index #main {
   border: 0;
 }
 
+.map-container span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
 #overide-center {
   text-align: center !important;
 }
