--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3499,6 +3499,7 @@ body.index #main {
 
 #overide-center {
   text-align: center !important;
+  white-space: pre-line !important;
 }
 
 .yelp-review {
