--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3510,3 +3510,17 @@ body.index #main {
 .black-color {
   color: #4d4d4d !important;
 }
+
+.star-container {
+  display: inline-flex;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2em;
+}
+
+.star-container .icon {
+  font-size: 16px;
+  color: gold;
+  position: relative !important;
+}
