--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,7 +193,7 @@ body,
 input,
 select,
 textarea {
-  color: #7c8081;
+  color: #282828; /* Text color main */
   font-family: "Lato", sans-serif;
   font-size: 15pt;
   font-weight: 300;
@@ -3480,7 +3480,8 @@ body.index #main {
   padding-bottom: 25%;
   height: 100px;
   overflow: hidden;
-  margin-bottom: 2em;
+  margin-top: 2em;
+  margin-bottom: 4em;
 }
 
 .map-container iframe {
@@ -3521,7 +3522,7 @@ body.index #main {
 }
 
 .black-color {
-  color: #4d4d4d !important;
+  color: #3c3c3c !important;
 }
 
 .star-container {
@@ -3697,4 +3698,8 @@ table tr:hover {
     display: block;
     padding: 10px;
   }
+}
+
+.mb-50 {
+  margin-bottom: 50px;
 }
