--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3188,8 +3188,8 @@ body.index #main {
     width: 275px;
     z-index: 10002;
     background: #fff;
-    color: #3f3f3f;
-    font-size: 0.8em;
+    color: #2a2a2a;
+    font-size: 1em;
     letter-spacing: 0.075em;
     text-transform: uppercase;
     padding: 0.25em 0.75em 1em 0.75em;
