Table header fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3642,8 +3642,8 @@ table td {
 }
 
 table th {
-  background-color: #c8c8c8;
-  color: rgb(29, 29, 29);
+  background-color: #5e5e5e;
+  color: rgb(255, 255, 255);
 }
 
 #left-th {
