--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3679,14 +3679,6 @@ table tr:hover {
   font-size: 30px;
 }
 
-@media screen and (max-width: 736px) {
-  #medium-number {
-    font-size: 24px;
-    display: block;
-    padding-bottom: 10px;
-  }
-}
-
 #big-number {
   font-size: 60px;
 }
@@ -3711,4 +3703,20 @@ table tr:hover {
   background-color: #f9f9f9;
   color: #333;
   margin-bottom: 70px;
+}
+
+#main-logo-image {
+  height: 140px;
+}
+
+@media screen and (max-width: 736px) {
+  #medium-number {
+    font-size: 24px;
+    display: block;
+    padding-bottom: 10px;
+  }
+
+  #main-logo-image {
+    height: 100px;
+  }
 }
