--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Merriweather:300,400,900");
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,500,900");
 
 /*
 	Twenty by HTML5 UP
@@ -2526,13 +2527,17 @@ button.small,
   background: transparent;
   box-shadow: none;
   color: #000000;
-  padding: 2em 2.5em;
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+  background-color: #fff;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.075);
+  padding: 1.5em 2.5em;
   position: absolute;
 }
 
 #header.alt nav {
   right: 2.5em;
-  top: 1.75em;
+  top: 1.1em;
 }
 
 #header.alt nav ul li.active > a,
